agregue para cal igv

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,7 @@
                     Para Factura
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ url_for('caligv') }}">Calcular IGV</a>
                     <a class="dropdown-item" href="{{ url_for('proforma') }}">Proforma</a>
                 </div>
             </li>                
