--- a/templates/cotizar.html
+++ b/templates/cotizar.html
@@ -92,6 +92,7 @@
             <option value="">Selecciona el tipo de vela</option>
             <option value="vela">Vela</option>
             <option value="vela_con_organza">Vela con organza</option>
+            <option value="vela_con_sticker">Vela con sticker</option>
             <option value="vela_con_yute">Vela con yute</option>
             <option value="vela_con_yute_y_soguilla_verde">Vela con yute y soguilla verde</option>
             <option value="vela_mas_empaque">Vela más empaque</option>
