--- a/templates/cotizar.html
+++ b/templates/cotizar.html
@@ -30,6 +30,7 @@
             <option value="">Selecciona el tipo de maceta</option>
             <option value="macetas">Macetita</option>
             <option value="macetas_con_yute">Macetita con yute</option>
+            <option value="macetas_con_caja_personalizada">Macetita en caja personalizada</option>
             <option value="macetas_con_caja">Macetita con caja</option>
             <option value="macetas_con_sticker">Macetita con sticker</option>
         </select>
