--- a/templates/proforma.html
+++ b/templates/proforma.html
@@ -12,11 +12,11 @@
     </div>
     <div class="form-group">
         <label for="direccionCliente">Dirección</label>
-        <input type="text" class="form-control" id="direccionCliente" name="direccionCliente" required>
+        <input type="text" class="form-control" id="direccionCliente" name="direccionCliente" >
     </div>
     <div class="form-group">
         <label for="rucCliente">RUC</label>
-        <input type="text" class="form-control" id="rucCliente" name="rucCliente" required>
+        <input type="text" class="form-control" id="rucCliente" name="rucCliente" >
     </div>
 
     <h5><strong>Detalle de Producto</strong></h5>
@@ -56,7 +56,7 @@
     <div class="row">
         <div class="col-md-6">
             <h5><strong>NOMBRE DE LA EMPRESA</strong></h5>
-            <p>Dirección: Calle Ficticia 123</p>
+            <p>Dirección: </p>
             <p>Teléfono: 987654321</p>
             <p>Correo electrónico: empresa@email.com</p>
             <p>RUC: 12345678900</p>
@@ -69,16 +69,23 @@
 
     <hr>
 
-    <!-- Datos del Cliente -->
-    {% if cliente_nombre %}
-    <div>
-        <h5><strong>DATOS DEL CLIENTE</strong></h5>
-        <p>Nombre o razón social: {{ cliente_nombre }}</p>
-        <p>Dirección: {{ direccion_cliente }}</p>
-        <p>Identificación fiscal: {{ ruc_cliente }}</p>
-    </div>
-    <hr>
+<!-- Datos del Cliente -->
+{% if cliente_nombre %}
+<div>
+    <h5><strong>DATOS DEL CLIENTE</strong></h5>
+    <p>Nombre o razón social: {{ cliente_nombre }}</p>
+
+    {% if direccion_cliente %}
+    <p>Dirección: {{ direccion_cliente }}</p>
     {% endif %}
+
+    {% if ruc_cliente %}
+    <p>Identificación fiscal: {{ ruc_cliente }}</p>
+    {% endif %}
+</div>
+<hr>
+{% endif %}
+
 
 <!-- Detalle de Productos -->
 <div class="table-responsive mt-4">
@@ -133,13 +140,6 @@
 
     <hr>
 
-    <!-- Condiciones de Venta -->
-    <div>
-        <h5><strong>CONDICIONES DE VENTA</strong></h5>
-        <p>Forma de pago: Efectivo o Transferencia</p>
-        <p>Tiempo de entrega: 3 días hábiles</p>
-        <p>Validez de la proforma: 7 días</p>
-    </div>
 
 </div> <!-- fin de .proforma-container -->
 
